other-cel/prevent-cr8escape/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  securityContext:
    sysctls:
    - name: "foo"
      value: "foo+bar"
    - name: "bar"
      value: "foo"
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  securityContext:
    sysctls:
    - name: "bar"
      value: "foo"
    - name: "foo"
      value: "foo=bar"
  containers:
  - name: busybox
    image: busybox:1.35
