other-cel/prevent-cr8escape/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-cr8escape
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
